small additions to the gulp file and cleaning

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <h1>The Boiler Nude</h1>
     <h2>Setting Up a Gulp Workflow for Beginners</h2>
     <h3></h3>
+    <p>camilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camilovamilo camiloamilo camilo </p>
 </body>
 </html>
