--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!doctype html>
-
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-
-  <title>The Boiler Nude</title>
-  <meta name="description" content="The Boiler nude">
-  <meta name="author" content="iflovecoding.com">
-
-  <link rel="stylesheet" href="dist/css/main.css">
- <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
-
-<body>
-    <h1>The Boiler Nude</h1>
-    <h2>Setting Up a Gulp Workflow for Beginners</h2>
-    <h3></h3>
-    <p>camilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camilovamilo camiloamilo camilo markus is heredksdlfjdskkdjaksdjwkdjsakdjkwkjdwkasdjwksdjcamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camilovamilo camiloamilo camilo markus is heredksdlfjdskkdjaksdjwkdjsakdjkwkjdwkasdjwksdjcamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camilovamilo camiloamilo camilo markus is heredksdlfjdskkdjaksdjwkdjsakdjkwkjdwkasdjwksdjcamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camilovamilo camiloamilo camilo markus is heredksdlfjdskkdjaksdjwkdjsakdjkwkjdwkasdjwksdjcamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camilovamilo camiloamilo camilo markus is heredksdlfjdskkdjaksdjwkdjsakdjkwkjdwkasdjwksdj</p>
-       <p>camilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camilovamilo camiloamilo camilo markus is heredksdlfjdskkdjaksdjwkdjsakdjkwkjdwkasdjwksdjcamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camilovamilo camiloamilo camilo markus is heredksdlfjdskkdjaksdjwkdjsakdjkwkjdwkasdjwksdjcamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camilovamilo camiloamilo camilo markus is heredksdlfjdskkdjaksdjwkdjsakdjkwkjdwkasdjwksdjcamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camilovamilo camiloamilo camilo markus is heredksdlfjdskkdjaksdjwkdjsakdjkwkjdwkasdjwksdjcamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camiloamilo camilovamilo camiloamilo camilo markus is heredksdlfjdskkdjaksdjwkdjsakdjkwkjdwkasdjwksdj</p>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="The Boiler nude">
+		<meta name="author" content="iflovecoding.com">
+		<link rel="stylesheet" href="dist/css/main.css">
+		
+		<title>The Boiler-Nude |  Setting Up a Complete Gulp Workflow for Beginners </title>
+		
+		<link rel="stylesheet" href="css/main.min.css">
+		<!--[if lt IE 9]>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+		<![endif]-->
+		<link rel="icon" href="images/favicon.png">
+	</head>
+    <body>
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	 <script src="src/js/script.js"></script>
+	</body>
 </html>
