--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!--[if lt IE 9]>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
 		<![endif]-->
-		<link rel="icon" href="images/favicon.png">
+		<link rel="icon" href="">
 	</head>
     <body>
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
