--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="The Boiler nude">
 		<meta name="author" content="iflovecoding.com">
+		<meta name="keywords" content="HTML,CSS,XML,JavaScript">
 		<link rel="stylesheet" href="dist/css/main.css">
-		
 		<title>The Boiler-Nude  | Setting Up a Complete Gulp Workflow for Beginners </title>
-		
-		<link rel="stylesheet" href="css/main.min.css">
 		<!--[if lt IE 9]>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
 		<![endif]-->
 		<link rel="icon" href="">
 	</head>
     <body>
-	    <h1>boilder nude</h1>
+
+	 <strong>The Boiler Nude </strong>
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	 <div id="article"> this is a block container element</div>
+	 <span>inline span this geows just until you finish writing </span>
+	 <article>this is an article
+		 
+		 
+		 
+	 </article>
 	 <script src="src/js/script.js"></script>
 	</body>
 </html>
