--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	 <strong>The Boiler Nude </strong>
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	 <div id="article"> this is a block container element</div>
-	 <span>inline span this geows just until you finish writing </span>
+	 <span>inline span this geows just until you finish writing dsdasdsad</span>
 	 <article>this is an article to isolate content</article>
 	 <script src="src/js/script.js"></script>
 	</body>
